samples/_failures_safe/1761539135_ac3c46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae08c000.c: In function ‘main’:
./samples/SAFE/__tmp_ae08c000.c:146:9: error: expected declaration or statement at end of input
  146 |         buffer_free(&input_buf);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_ae08c000.c:146:9: error: expected declaration or statement at end of input
